# OOP_hw1_var16

./: .gitignore  CMakeLists.txt
src/compile/: gcd.cpp  main.cpp
src/include/: gcd.h
src/test/: gtest.cpp
